Sử dụng redit để giảm thời gian response của các api get dữ liệu của product
